Add negative exponential wave.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>OPL3 Test</title>
-	<script src="opl3.js" defer></script>
-	<script src="ui.js" defer></script>
+	<script src="ui.js" type="module"></script>
 </head>
 <body>
 	<button id="btn-start" type="button">Start</button>
