Switch to OPN2 / YM2612.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OPL3 Test</title>
+	<title>OPN2 Test</title>
 	<script src="ui.js" type="module"></script>
 </head>
 <body>
-	<button id="btn-start" type="button">Start</button>
+	<button id="btn-init" type="button">Initialize</button><br>
+	<button id="btn-note-on" type="button">Note On</button><br>
+	<button id="btn-sound-off" type="button">Sound Off</button>
 </body>
 </html>
