--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<button id="btn-init" type="button">Initialize</button><br>
-	<button id="btn-note-on" type="button">Note On</button><br>
+	<button id="btn-note" type="button">Play Note</button><br>
 	<button id="btn-sound-off" type="button">Sound Off</button>
 </body>
 </html>
