--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<form class="container bg-theme-dark" id="instrument-panel">
-		<ul class="nav nav-pills nav-fill" role="tablist" id="instrument-tablist">
+		<ul class="nav nav-pills nav-fill mb-1" role="tablist" id="instrument-tablist">
 			<li class="nav-item" role="presentation">
 				<a class="nav-link active" id="instrument-tab" data-toggle="tab" href="#instrument" role="tab" aria-controls="instrument" aria-selected="true">
 					Instrument
@@ -92,7 +92,7 @@
 						</div>
 						<div class="col-6 col-md-3 mb-3 mb-md-0">
 							<div class="input-group">
-								<input type="number" min="0" max="99.9" step="0.2" value="0" class="form-control led-display text-right" id="lfo-frequency" disabled>
+								<input type="number" min="0" max="99.9" step="0.2" value="0" class="form-control led-display" id="lfo-frequency" disabled>
 								<div class="input-group-append">
 									<span class="input-group-text led-label">Hz</span>
 								</div>
@@ -125,7 +125,7 @@
 						</div>
 						<div class="col-6 col-md-3">
 							<div class="input-group">
-								<input type="number" min="0" max="99.9" step="0.1" value="0" class="form-control led-display text-right" id="lfo-delay">
+								<input type="number" min="0" max="99.9" step="0.1" value="0" class="form-control led-display" id="lfo-delay">
 								<div class="input-group-append">
 									<span class="input-group-text led-label">seconds</span>
 								</div>
@@ -143,7 +143,7 @@
 						</div>
 						<div class="col-6 col-md-3">
 							<div class="input-group">
-								<input type="number" min="-999.9" max="999.9" step="0.1" value="0" class="form-control led-display text-right" id="vibrato" disabled>
+								<input type="number" min="-999.9" max="999.9" step="0.1" value="0" class="form-control led-display" id="vibrato" disabled>
 								<div class="input-group-append">
 									<span class="input-group-text led-label">cents</span>
 								</div>
@@ -166,32 +166,46 @@
 			<div class="tab-pane fade show" id="operator-$" role="tabpanel" aria-labelledby="operator-$-tab" data-operator="$">
 				<fieldset class="panel">
 					<h1>Frequency</h1>
-					<div class="row">
+					<div class="row form-group">
 						<div class="col-4 col-md-2 my-auto">
 							<div class="form-check">
 								<input type="radio" name="op$-freq-fixed" id="op$-freq-unfixed" class="form-check-input" checked>
 								<label for="op$-freq-unfixed">Multiple</label>
 							</div>
 						</div>
-						<div class="col-auto">
-							<select id="op$-multiple-preset" class="form-control led-display text-right">
-								<option value="0.5">0.5</option>
-								<option value="1" selected>1</option>
-								<option value="2">2</option>
-								<option value="3">3</option>
-								<option value="4">4</option>
-								<option value="5">5</option>
-								<option value="6">6</option>
-								<option value="7">7</option>
-								<option value="8">8</option>
-								<option value="9">9</option>
-								<option value="10">10</option>
-								<option value="11">11</option>
-								<option value="12">12</option>
-								<option value="13">13</option>
-								<option value="14">14</option>
-								<option value="15">15</option>
+						<div class="col-12 col-md-6 mb-3 my-md-auto pl-0">
+							<input type="range" min="0" max="15" value="1" class="form-control-range mt-1" id="op$-multiple-slider">
+						</div>
+						<div class="col-4 col-md-2">
+							<input type="number" min="0" value="1" class="form-control led-display" id="op$-multiple" disabled>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-4 col-md-2"></div>
+						<div class="col-2 col-md-1 px-0">Octave</div>
+						<div class="col-auto">Note</div>
+					</div>
+					<div class="row form-group">
+						<div class="col-4 col-md-2 my-auto">
+							<div class="form-check">
+								<input type="radio" name="op$-freq-fixed" id="op$-freq-fixed" class="form-check-input">
+								<label for="op$-freq-fixed">Fixed</label>
+							</div>
+						</div>
+						<div class="col-2 col-md-1 px-0">
+							<select class="form-control led-display w-fit" id="op$-block">
+								<option>0&nbsp;</option>
+								<option>1&nbsp;</option>
+								<option>2&nbsp;</option>
+								<option>3&nbsp;</option>
+								<option selected>4&nbsp;</option>
+								<option>5&nbsp;</option>
+								<option>6&nbsp;</option>
+								<option>7&nbsp;</option>
 							</select>
+						</div>
+						<div class="col-auto">
+							<input type="number" min="0" max="2047" value="1093" class="form-control led-display" id="op$-freq-num">
 						</div>
 					</div>
 				</fieldset>
