--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 						</div>
 					</div>
 					<div class="row form-group">
-						<div class="col-6">
+						<div class="col-auto">
 							<div class="form-check small">
 								<input type="checkbox" id="vibrato-free" class="form-check-input">
 								<label for="vibrato-free">Free Choice</label>
@@ -166,7 +166,7 @@
 			<div class="tab-pane fade show" id="operator-$" role="tabpanel" aria-labelledby="operator-$-tab" data-operator="$">
 				<fieldset class="panel">
 					<h1>Frequency</h1>
-					<div class="row form-group">
+					<div class="row">
 						<div class="col-4 col-md-2 my-auto">
 							<div class="form-check">
 								<input type="radio" name="op$-freq-fixed" id="op$-freq-unfixed" class="form-check-input" checked>
@@ -177,7 +177,16 @@
 							<input type="range" min="0" max="15" value="1" class="form-control-range mt-1" id="op$-multiple-slider">
 						</div>
 						<div class="col-4 col-md-2">
-							<input type="number" min="0" value="1" class="form-control led-display" id="op$-multiple" disabled>
+							<input type="text" value="1" class="form-control led-display" id="op$-multiple" disabled pattern="\d+([/.]\d+)?">
+						</div>
+					</div>
+					<div class="row form-group">
+						<div class="col-4 col-md-2"></div>
+						<div class="col-auto">
+							<div class="form-check small">
+								<input type="checkbox" id="op$-multiple-free" class="form-check-input">
+								<label for="op$-multiple-free">Free Choice</label>
+							</div>
 						</div>
 					</div>
 					<div class="row">
