Disable operator UI.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,62 @@
 							<img src="img/algorithm-7.png" alt="1, 2, 3 &amp; 4" class="my-4">
 						</label>
 					</div>
+					<div class="row">
+						<div class="col-4 col-md-2 col-form-label">
+							Operator 1
+						</div>
+						<div class="col-8 col-md-4 mb-3">
+							<div class="btn-group btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-dark active">
+									<input type="radio" name="op1-enable" id="op1-enabled" checked>Enabled
+								</label>
+								<label class="btn btn-dark">
+									<input type="radio" name="op1-enable" id="op1-disabled">Disabled
+								</label>
+							</div>
+						</div>
+						<div class="col-4 col-md-2 col-form-label">
+							Operator 2
+						</div>
+						<div class="col-8 col-md-4 mb-3">
+							<div class="btn-group btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-dark active">
+									<input type="radio" name="op2-enable" id="op2-enabled" checked>Enabled
+								</label>
+								<label class="btn btn-dark">
+									<input type="radio" name="op2-enable" id="op2-disabled">Disabled
+								</label>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-4 col-md-2 col-form-label">
+							Operator 3
+						</div>
+						<div class="col-8 col-md-4 mb-3">
+							<div class="btn-group btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-dark active">
+									<input type="radio" name="op3-enable" id="op3-enabled" checked>Enabled
+								</label>
+								<label class="btn btn-dark">
+									<input type="radio" name="op3-enable" id="op3-disabled">Disabled
+								</label>
+							</div>
+						</div>
+						<div class="col-4 col-md-2 col-form-label">
+							Operator 4
+						</div>
+						<div class="col-8 col-md-4 mb-3">
+							<div class="btn-group btn-group-toggle" data-toggle="buttons">
+								<label class="btn btn-dark active">
+									<input type="radio" name="op4-enable" id="op4-enabled" checked>Enabled
+								</label>
+								<label class="btn btn-dark">
+									<input type="radio" name="op4-enable" id="op4-disabled">Disabled
+								</label>
+							</div>
+						</div>
+					</div>
 				</fieldset>
 				<fieldset class="panel">
 					<h1>LFO</h1>
