--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row form-group">
 						<div class="col-4 col-md-2 col-form-label">
 							Operator 3
 						</div>
@@ -138,6 +138,79 @@
 								</label>
 							</div>
 						</div>
+					</div>
+					<div class="mx-auto table-responsive">
+						<table class="table table-borderless table-striped-cols">
+							<tr>
+								<th colspan="5" class="py-1 text-center" style="padding-left: 46px">From</th>
+							</tr>
+							<tr class="text-center">
+								<th class="text-center py-1 px-0">To</th>
+								<th class="py-1">1</th>
+								<th class="py-1">2</th>
+								<th class="py-1">3</th>
+								<th class="py-1">4</th>
+							</tr>
+							<tr>
+								<th class="align-middle text-center px-0">1</th>
+								<td>
+									<input type="number" min="0" max="100" value="0" class="form-control led-display" id="modulation-1-1">
+								</td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<th class="align-middle text-center px-0">2</th>
+								<td>
+									<input type="number" min="0" max="100" value="0" class="form-control led-display" id="modulation-1-2">
+								</td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<th class="align-middle text-center px-0">3</th>
+								<td>
+									<input type="number" min="0" max="100" value="0" class="form-control led-display" id="modulation-1-3">
+								</td>
+								<td>
+									<input type="number" min="0" max="100" value="0" class="form-control led-display" id="modulation-2-3">
+								</td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<th class="align-middle text-center px-0">4</th>
+								<td>
+									<input type="number" min="0" max="100" value="0" class="form-control led-display" id="modulation-1-4">
+								</td>
+								<td>
+									<input type="number" min="0" max="100" value="0" class="form-control led-display" id="modulation-2-4">
+								</td>
+								<td>
+									<input type="number" min="0" max="100" value="0" class="form-control led-display" id="modulation-3-4">
+								</td>
+								<td></td>
+							</tr>
+							<tr>
+								<th>
+
+								</th>
+								<td>
+									<input type="number" min="0" max="100" value="100" class="form-control led-display" id="output-level-1">
+								</td>
+								<td>
+									<input type="number" min="0" max="100" value="100" class="form-control led-display" id="output-level-2">
+								</td>
+								<td>
+									<input type="number" min="0" max="100" value="100" class="form-control led-display" id="output-level-3">
+								</td>
+								<td>
+									<input type="number" min="0" max="100" value="100" class="form-control led-display" id="output-level-4">
+								</td>
+							</tr>
+						</table>
 					</div>
 				</fieldset>
 				<fieldset class="panel">
